Ebuka-Test/MasterTemplate/sg.tf
resource "aws_security_group" "dev_SG" {
  name        = "allow_ssh_and_http_traffic"
  description = "Allow http and ssh inbound traffic"
  vpc_id      = aws_vpc.devVPC.id

  ingress {
    description      = "Http from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "SSH from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "dev-sg"
  }
}
